--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,37 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Netrunner Codex
+description: TBC
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://netrunnercodex.github.io
+
+permalink: pretty
+
+# logo: "/assets/images/logo512.png"
+# favicon_ico: "/assets/images/favicon.ico"
+
+color_scheme: foo
+
+nav_enabled: true
 
 aux_links:
-  Template Repository: https://github.com/just-the-docs/just-the-docs-template
+  Github: https://github.com/NetrunnerCodex/NetrunnerCodex.github.io
+
+callouts_level: quiet # or loud
+callouts:
+  highlight:
+    color: yellow
+  important:
+    title: Important
+    color: purple
+  new:
+    title: New
+    color: green
+  note:
+    title: Note
+    color: blue
+  warning:
+    title: Warning
+    color: red
+
+back_to_top: true
+back_to_top_text: "Back to top"
